--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 
@@ -198,7 +199,7 @@
                             <div class="modal-body">
                                  !!! haz la eleccion para tu tipo de viaje !!!
 
-                                 <select id="opAven1"  onchange="getSelectValue();"  >
+                                 <select id="opAven1" onclick="montrarSweet" onchange="getSelectValue();"  >
                                     <h4>Que tipo de viaje quieres tener? elige: </h4>
                                     <option value="0">Elige un tipo de viaje</option> 
                                     <option value="1">Viaje de Aventura</option> 
@@ -276,7 +277,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    
 
 
     
