--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    
 
 </head>
 
@@ -348,10 +349,38 @@
         <button type="button" onclick="guardarEnLocalStorage()">Registrar</button>
 
     </form>
+
 <br>
 <br>
 <br>
 
+
+<h5>ofertas</h5>
+    <div class="tablaOfertas">
+
+     
+        <table class="striped">
+            <thead class="black white-text">
+                <tr>
+                    <th>ID</th>
+                    <th>Destino</th>
+                    <th>Estadia</th>
+                    <th>Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ID</td>
+                    <td>Salta</td>
+                    <td>15 dias</td>
+                    <td>30000</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+<br>
+<br>
+<br>
 
 </footer>
 <script src="./javascript/codigo.js"></script>
