--- a/secciones/romantica.html
+++ b/secciones/romantica.html
@@ -17,6 +17,8 @@
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/javascript/codigo.js">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body>
@@ -71,6 +73,12 @@
         </div>
     </nav>
     <br>
+    <div class="modal1">
+        <button type="button" id="btnAventura" onclick="btnRomantico()" class="btn btn-info" data-toggle="modal"
+            data-whatever="@mdo">Solos y Solas</button>
+
+
+    </div>
     <br>
 
     <div class="cajon">
@@ -365,7 +373,7 @@
 
 
     </div>
-
+    
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
